Revision history for Neo4j::Driver

0.24  2021-06-21  (TRIAL RELEASE)

 - Jolt is enabled by default and no longer experimental

0.23  2021-04-23

 - work around breaking change in Neo4j 4.2.5 Jolt implementation

0.22  2021-02-11

 - allow statements to begin with whitespace (fix issue #13)
 - fix test failing in old Perls with non-English locale (issue #12)

0.21  2021-02-06

 - add experimental support for HTTP responses in Jolt format
 - add experimental option for custom networking modules
 - announce future switch from Neo4j::Driver::Type::* to Neo4j::Types::*
 - fix Node->labels() method, which could die on nodes without labels (issue #11)
 - declare Time::Piece 1.20 dependency (for Perl < 5.14)
 - remove REST::Client dependency

0.20  2021-01-10

 - track timeout of HTTP transactions

0.19  2021-01-09  (TRIAL RELEASE)

 - add experimental support for newer Bolt protocol versions (for Neo4j 4)
 - add experimental protocol() method to ServerInfo
 - version discovery succeeds on Neo4j 1.x (which is otherwise unsupported)
 - rename StatementResult module to Result, in line with the Neo4j Driver API
 - internal redesign (removes private Transport modules)

0.18  2020-10-24

 - fix handling of index/key collisions in field names
 - deprecate experimental Record->{column_keys} access
 - deprecate experimental Record->{meta} access
 - deprecate experimental Path->path() method
 - warn when accessing the internals of node/rel/path objects (see issue #8)

0.17  2020-10-12

 - the Neo4j 4 default database name is reliably auto-detected (fix issue #6)
 - the option to select a database is no longer experimental
 - the option to select a database is now safely ignored on Neo4j 2/3
 - fix rare assertion failure when retrieving nodes or relations on Neo4j 4
 - get ServerInfo automatically when opening a new session
 - try to improve compatibility with outdated JSON module versions

0.16  2020-04-12
