@@ -3,6 +3,7 @@ Revision history for Neo4j::Driver
 0.24  2021-06-21  (TRIAL RELEASE)
 
  - Jolt is enabled by default and no longer experimental
+ - Bolt for Neo4j 4 is no longer experimental
 
 0.23  2021-04-23
 
